# mem

./: .cproject  .project  CMakeLists.txt  README.md
include/: mem.h
src/: mem.c
test/: CMakeLists.txt  testCpp.cpp
